remove numpy constraint
Signed-off-by: Terrier <rterrier@apc.in2p3.fr>

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ zip_safe = False
 packages = find:
 python_requires = >=3.8
 install_requires =
-    numpy>=1.19,<1.23
+    numpy>=1.19
     scipy>=1.4
     astropy>=5.0
     regions>=0.5.0
