--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,7 @@ jobs:
       - name: Install base dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install 'tox<4'
+          python -m pip install tox
       - name: download datasets
         if: ${{ matrix.gammapy_data_path }}
         run: |
@@ -121,7 +121,7 @@ jobs:
       - name: Install base dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install 'tox<4'
+          python -m pip install tox
       - name: download datasets
         run: |
           python -m pip install tqdm requests
